unpackaged/main/default/objects/Medication__c/Medication__c.object-meta.xml
<CustomObject>
    <description>Holds information about medications in use by Patients.  Intended to be populated either manually, or via integration with an API.</description>
    <label>Medication</label>
    <nameField>
        <label>Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>