unpackaged/main/default/objects/Medication__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>identifies if this medication is a brand name or not</description>
    <label>Brand Name?</label>
    <type>Checkbox</type>
</CustomField>