unpackaged/main/default/objects/Medication__c/fields/Med_Name__c.field-meta.xml
<CustomField>
    <fullName>Med_Name__c</fullName>
    <label>Med Name</label>
    <type>TextArea</type>
</CustomField>