unpackaged/main/default/objects/Medication__c/fields/Product_NDC__c.field-meta.xml
<CustomField>
    <fullName>Product_NDC__c</fullName>
    <label>Product NDC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>