unpackaged/main/default/objects/Medication__c/fields/RXCUI__c.field-meta.xml
<CustomField>
    <fullName>RXCUI__c</fullName>
    <description>The RXCUI identifier for this medication.</description>
    <label>RXCUI</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>