unpackaged/main/default/objects/Medication__c/fields/RXCUI_Possible_Matches__c.field-meta.xml
<CustomField>
    <fullName>RXCUI_Possible_Matches__c</fullName>
    <label>RXCUI Possible Matches</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>