unpackaged/main/default/objects/Medication__c/fields/SetID__c.field-meta.xml
<CustomField>
    <fullName>SetID__c</fullName>
    <label>SetID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>