unpackaged/main/default/objects/Medication__c/fields/Side_Effects_Statement__c.field-meta.xml
<CustomField>
    <fullName>Side_Effects_Statement__c</fullName>
    <label>Side Effects Statement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>