unpackaged/main/default/objects/Medication__c/fields/Update_Medication_Information__c.field-meta.xml
<CustomField>
    <fullName>Update_Medication_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, triggers a process to refresh the Medication information from defined sources.  Triggers an outbound message to external providers.</description>
    <label>Update Medication Information</label>
    <type>Checkbox</type>
</CustomField>