unpackaged/main/default/objects/Medication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand_Name__c</columns>
    <columns>RXCUI__c</columns>
    <columns>Product_NDC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>